--- a/all task/index.html
+++ b/all task/index.html
@@ -8,6 +8,7 @@
     <ul>
         <li><a target="_blank" href="./miyaqq.html">Miya QQ</a></li>
         <li><a target="_blank" href="./ashikqq.html">Ashik QQ</a></li>
+        <li><a target="_blank" href="./lovingIndonesia.html">loving Indonesia Clone</a></li>
         <li><a target="_blank" href="./buttons.html">My Button Collectons</a></li>
     </ul>
 </body>
