--- a/all task/buttons.html
+++ b/all task/buttons.html
@@ -17,8 +17,8 @@
           <span></span>
         </a>
       </div>
-      <div class="button_22">
-        <button class="button_22">Button 2</button>
+      <div class="button_two">
+        <button class="button_two">Button 2</button>
       </div>
       <div class="button_three">
         <div class="button_3-wrapper">
