--- a/all task/lovingIndonesia.html
+++ b/all task/lovingIndonesia.html
@@ -2,6 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <link rel="stylesheet" href="./lovingIndonesiaClone/style.css">
     <link rel="stylesheet" href="./lovingIndonesiaClone/animate.css">
     <link
@@ -18,7 +21,9 @@
  <nav id="top" class="navigation_bar">
     <div class="container nav_container">
         <div class="left_nav">
-            <img src="./lovingIndonesiaClone/assets/Logo-Header-Web-LovingIndonesia-ouo00j42fgojyit11xh3tbpd5f527t2v0f0ow4ip0k.png" alt="logo">
+            <div class="logo_div">
+                <img src="./lovingIndonesiaClone/assets/Logo-Header-Web-LovingIndonesia-ouo00j42fgojyit11xh3tbpd5f527t2v0f0ow4ip0k.png" alt="logo">
+            </div>
             <div class="nav_info flex">
                 <i class="fas fa-phone-alt icon"></i>
                 <p class="nav_info__text">083 831 455 049</p>
