--- a/all task/index.html
+++ b/all task/index.html
@@ -11,6 +11,7 @@
         <li><a target="_blank" href="./lovingIndonesia.html">loving Indonesia Clone</a></li>
         <li><a target="_blank" href="./Kasino.html">Kasino Clone</a></li>
         <li><a target="_blank" href="./clippingusaClone.html">ClippingUSA Clone</a></li>
+        <li><a target="_blank" href="./BameClone.html">Bomer Clone</a></li>
         <li><a target="_blank" href="./buttons.html">My Button Collectons</a></li>
     </ul>
 </body>
